# chatsoftware

./: .gitignore  README.md
MMClient/: .gitignore
MMClient/MelodicMessages/: .gitignore  MMProtocol.h  MelodicMessages.pro  MelodicMessages.pro.user.3e73ae7  main.cpp  mmclient.cpp  mmclient.h  mmclient.ui  mmcommon.cpp  mmcommon.h  mmuimanager.cpp  mmuimanager.h
MMClient/MelodicMessages/configuration/: MMConfig.conf  MMConfiguration.pri
MMClient/MelodicMessages/resource/: resource.qrc
MMClient/MelodicMessages/src/MMDataModule/: MMBaseData.h  MMBaseDataJson.cpp  MMBaseDataJson.h  MMDataModule.pri  MMOtherData.cpp  mmlogindata.cpp  mmlogindata.h
MMClient/MelodicMessages/src/MMDataModule/MMDataBase/: MMDataBase.pri  mmdatabase.cpp  mmdatabase.h  mmdatabinarybase.cpp  mmdatabinarybase.h  mmdatajsonbase.cpp  mmdatajsonbase.h
MMClient/MelodicMessages/src/MMDataModule/MMLoginData/: MMLoginData.pri  mmlogindata.cpp  mmlogindata.h
MMClient/MelodicMessages/src/MMFactoryModule/: MMFactoryModule.pri
MMClient/MelodicMessages/src/MMFactoryModule/MMDataFactory/: MMDataFactory.pri  mmdatafacotry.cpp  mmdatafacotry.h
MMClient/MelodicMessages/src/MMGlobalModule/: MMGlobalModule.pri
MMClient/MelodicMessages/src/MMGlobalModule/MMDistroySystem/: MMDistroySystem.pri  mmdistroysystem.cpp  mmdistroysystem.h
MMClient/MelodicMessages/src/MMGlobalModule/MMInstance/: MMInstance.pri  (+6 more)
MMClient/MelodicMessages/src/MMNetworkModule/: MMNetworkModule.pri
MMClient/MelodicMessages/src/MMUiModule/: MMUiModule.pri
MMClient/build-MelodicMessages-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.MelodicMessages.Debug  object_script.MelodicMessages.Release  ui_mmaccountlogin.h  ui_mmlogindialog.h
MMClient/build-MelodicMessages-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
MMClient/build-MelodicMessages-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/: moc_mmaccountlogin.cpp  moc_mmbasenetwork.cpp  moc_mmlogindialog.cpp  moc_mmsystemglobal.cpp  qrc_resource.cpp
MMClient/vs/MelodicMessages/: .gitignore  MelodicMessages.sln  MelodicMessages.vcxproj  MelodicMessages.vcxproj.filters
MMCommon/: MMCommon.pri
MMCommon/include/: MMBaseData.h  MMBaseDataJson.h  MMOtherData.h  MMProtocol.h  mmdatafacotry.h  mmlogindata.h
MMCommon/src/: MMBaseDataJson.cpp  MMOtherData.cpp  mmdatafacotry.cpp  mmlogindata.cpp
MMDataFormat/: 协议头及命令码.md  数据格式.md
MMServer/: .gitignore  CMakeLists.txt
MMServer/include/: MMCommon.h  MMError.h  MMInclude.h  MMProtocol.h  MMThreadPool.h
MMServer/src/: CMakeLists.txt  MMCommon.cpp  MMError.cpp  main.cpp
MMServer/src/MMBase/: MMBaseData.h  MMBaseHandler.cpp  MMBaseHandler.h  MMBaseNetwork.cpp  MMBaseNetwork.h
MMServer/src/MMData/: MMLoginData.cpp  MMLoginData.h
MMServer/src/MMFactory/: CMakeLists.txt  MMDataFactory.cpp  MMDataFactory.h  MMHandlerFactory.cpp  MMHandlerFactory.h
MMServer/src/MMHandler/: CMakeLists.txt  MMLoginHandler.cpp  MMLoginHandler.h
MMServer/src/MMNetwork/: CMakeLists.txt  MMNetworkClient.cpp  MMNetworkClient.h  MMNetworkServer.cpp  MMNetworkServer.h
(+390 files in other folders)
